--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-router-dom": "^5.3.3",
     "firebase": "8.10.0",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
