--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@uidotdev/usehooks": "^2.4.0",
     "firebase": "8.10.0",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
